--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                     </div>
                     <div class="category-body">
                         <ul class="tool-list">
-                            <li><a href="/img-compress.html"><i class="fas fa-compress-alt"></i> Image Compressor</a></li>
+                            <li><a href="Tool/img-compress.html"><i class="fas fa-compress-alt"></i> Image Compressor</a></li>
                             <li><a href="#"><i class="fas fa-exchange-alt"></i> Image Converter</a></li>
                             <li><a href="#"><i class="fas fa-expand"></i> Image Resizer</a></li>
                             <li><a href="#"><i class="fas fa-crop"></i> Image Cropper</a></li>
